# projectrussell-cpp

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Makefile  format.ps1  licenses  projectrussel.filters  projectrussel.sln  projectrussel.vcxproj
content/Levels/: main.tmx
content/Shaders/: colored.gl.frag  colored.gl.vert  colored2DnoProj.gl.vert  text.gl.frag  text.gl.vert  textured.gl.frag  textured.gl.vert
content/Sound/: Sfx.bfxrsound  no.bfxrsound
enc_temp_folder/903e69a7247788b56d4257d480296d41/: player.cpp
src/: audio.cpp  audio.h  common.cpp  common.h  content.cpp  content.h  entities.cpp  entityCreator.h  game.cpp  game.h  graphics.cpp  graphics.h  main.cpp  math.cpp  math.h  mathstrings.h  pool.h  shader.cpp  shader.h
src/debug/: audioManagerRenderer.cpp  audioManagerRenderer.h
src/entities/: player.cpp  player.h  unit.cpp  unit.h
src/game/: basicRenderers.cpp  basicRenderers.h  player.cpp  player.h  unit.cpp  unit.h  unitRenderer.cpp  unitRenderer.h
